WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211445
[JSC] JSBigInt::maxLengthBits and JSBigInt::maxLength are wrong
https://bugs.webkit.org/show_bug.cgi?id=211445
Summary
[JSC] JSBigInt::maxLengthBits and JSBigInt::maxLength are wrong
Yusuke Suzuki
Reported
2020-05-05 07:28:05 PDT
[JSC] JSBigInt::maxLengthBits and JSBigInt::maxLength are wrong
Attachments
Patch
(2.18 KB, patch)
2020-05-05 07:33 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(2.19 KB, patch)
2020-05-05 07:49 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-05-05 07:33:15 PDT
Created
attachment 398502
[details]
Patch
Caio Lima
Comment 2
2020-05-05 07:41:01 PDT
Comment on
attachment 398502
[details]
Patch LGTM. I'm wondering if we want to static assert that `maxLengthBits % (sizeof(Digit) * bitsPerByte) == 0`. IIUC, if this is not true, we will have `maxLengthBits` not aligned with `maxLength`.
Yusuke Suzuki
Comment 3
2020-05-05 07:47:08 PDT
(In reply to Caio Lima from
comment #2
)
> Comment on
attachment 398502
[details]
> Patch > > LGTM. I'm wondering if we want to static assert that `maxLengthBits % > (sizeof(Digit) * bitsPerByte) == 0`. IIUC, if this is not true, we will have > `maxLengthBits` not aligned with `maxLength`.
Sounds nice.
Yusuke Suzuki
Comment 4
2020-05-05 07:49:18 PDT
Created
attachment 398505
[details]
Patch
Mark Lam
Comment 5
2020-05-05 08:24:10 PDT
Comment on
attachment 398505
[details]
Patch r=me
Mark Lam
Comment 6
2020-05-05 08:24:46 PDT
Comment on
attachment 398505
[details]
Patch Undoing can+ for now to let EWS run.
Mark Lam
Comment 7
2020-05-05 08:25:26 PDT
(In reply to Mark Lam from
comment #6
)
> Comment on
attachment 398505
[details]
> Patch > > Undoing can+ for now to let EWS run.
Ah autocorrect: /can+/cq+/
Yusuke Suzuki
Comment 8
2020-05-05 09:00:29 PDT
Comment on
attachment 398505
[details]
Patch EWS gets green, landing
EWS
Comment 9
2020-05-05 09:24:05 PDT
Committed
r261174
: <
https://trac.webkit.org/changeset/261174
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398505
[details]
.
Radar WebKit Bug Importer
Comment 10
2020-05-05 09:25:18 PDT
<
rdar://problem/62890572
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug