[JSC] JSBigInt::maxLengthBits and JSBigInt::maxLength are wrong https://bugs.webkit.org/show_bug.cgi?id=211445

Reviewed by Mark Lam.

JSBigInt::maxLengthBits and JSBigInt::maxLength definitions are wrong.

1. We are defining maxLength and maxLengthBits as an unrelated value to each other. This is wrong.
   maxLength should be defined as maxLengthBits / (sizeof(Digit) * bitsPerByte).
2. We use `sizeof(void*)` and assume that `sizeof(Digit) == sizeof(void*)`. This is wrong in ARM64_32 environment
   where Digit size is sizeof(uint64_t) while the pointer size is sizeof(uint32_t). This causes compile errors in ARM64_32
   when the code is using these values with static_assert.

* runtime/JSBigInt.h:


Canonical link: https://commits.webkit.org/224347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261174 268f45cc-cd09-0410-ab3c-d52691b4dbfc